--- a/elliptics/Makefile
+++ b/elliptics/Makefile
@@ -5,7 +5,7 @@ TARGET=test
 $(TARGET): libell.so
 	go build .
 
-libell.so: logger.o node.o
+libell.so: logger.o node.o key.o session.o
 	g++ -shared -o $@ $^
 
 %.o: %.cpp
