--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ go:
 before_install:
   - echo 'deb http://repo.reverbrain.com/precise current/amd64/' | sudo tee -a /etc/apt/sources.list
   - sudo apt-get update -qq
-  - sudo apt-get install elliptics-dev
+  - sudo apt-get install elliptics-dev --force-yes
 
 script:
   - go build ./elliptics/
