--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ go:
 before_install:
   - echo 'deb http://repo.reverbrain.com/precise current/amd64/' | sudo tee -a /etc/apt/sources.list
   - sudo apt-get update -qq
-  - sudo apt-get install elliptics-dev --force-yes
+  - sudo apt-get install elliptics-dev=2.24.15.0 elliptics-client=2.24.15.0 --force-yes
 
 script:
   - go test github.com/noxiouz/elliptics-go/elliptics
