Fix travis.yml: install go cover tool

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
   - echo 'deb http://repo.reverbrain.com/precise current/amd64/' | sudo tee -a /etc/apt/sources.list
   - sudo apt-get update -qq
   - sudo apt-get install elliptics-dev elliptics-client --force-yes
+  - go get code.google.com/p/go.tools/cmd/cover
 
 script:
   - go test -v -coverprofile=coverage.out github.com/noxiouz/elliptics-go/elliptics
