--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,21 @@
 language: go
 
 go:
-  - 1.2
+  - 1.3    
 
 before_install:
   - echo 'deb http://repo.reverbrain.com/precise current/amd64/' | sudo tee -a /etc/apt/sources.list
   - sudo apt-get update -qq
   - sudo apt-get install elliptics-dev elliptics-client --force-yes
+  - go get code.google.com/p/go.tools/cmd/cover
+  - go get github.com/mattn/goveralls
 
 script:
-  - go test github.com/noxiouz/elliptics-go/elliptics
+  - go test -v -coverprofile=coverage.out github.com/noxiouz/elliptics-go/elliptics
+  - go tool cover -func=coverage.out
+  - $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken d6Fnx2wcqx7Bk302wLSoeYbaDcxn3POKW
 
 branches:
   only:
   - master
+  - 2.26    
