--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: go
 
 go:
-  - 1.3    
+  - 1.3
 
 before_install:
   - echo 'deb http://repo.reverbrain.com/precise current/amd64/' | sudo tee -a /etc/apt/sources.list
@@ -17,5 +17,5 @@ script:
 
 branches:
   only:
-  - master
-  - 2.26    
+  - "master"
+  - "2.26"
