--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ go:
 before_install:
   - echo 'deb http://repo.reverbrain.com/precise current/amd64/' | sudo tee -a /etc/apt/sources.list
   - sudo apt-get update -qq
-  - sudo apt-get install elliptics-dev elliptics-client --force-yes
+  - sudo apt-get install elliptics-dev elliptics-client elliptics --force-yes
   - go get code.google.com/p/go.tools/cmd/cover
   - go get github.com/mattn/goveralls
   - cd fixtures && sudo ./start.sh && cd -
