--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: go
 
 go:
-  - 1.4
+  - 1.4.1
 
 before_install:
   - echo 'deb http://repo.reverbrain.com/precise current/amd64/' | sudo tee -a /etc/apt/sources.list
   - sudo apt-get update -qq
   - sudo apt-get install elliptics-dev elliptics-client elliptics libboost-system-dev --force-yes
-  - go get code.google.com/p/go.tools/cmd/cover
+  - go get golang.org/x/tools/cmd/cover
   - go get github.com/mattn/goveralls
   - cd fixtures && sudo ./start.sh && cd - && sleep 10
   - export FULL_TEST_REMOTES="localhost:1025:2" && export FULL_TEST_GROUPS="2"
