--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - sudo apt-get install elliptics-dev elliptics-client elliptics libboost-system-dev --force-yes
   - go get golang.org/x/tools/cmd/cover
   - go get github.com/mattn/goveralls
-  - cd fixtures && sudo ./start.sh && cd - && sleep 10
+  - cd ci/fixtures && sudo ./start.sh && cd - && sleep 10
   - export FULL_TEST_REMOTES="localhost:1025:2" && export FULL_TEST_GROUPS="2"
 
 script:
