--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - go get gopkg.in/check.v1
 
 script:
-  - go vet ./elliptics || true
+  - go vet ./elliptics
   - go test -v -coverprofile=coverage.out  -covermode=atomic ./elliptics
   - bash <(curl -s https://codecov.io/bash)
 
