--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ go:
 before_install:
   - echo 'deb http://repo.reverbrain.com/trusty current/amd64/' | sudo tee -a /etc/apt/sources.list
   - sudo apt-get update -qq
-  - sudo apt-get install elliptics-dev elliptics-client elliptics libboost-system-dev --force-yes
+  - sudo apt-get install elliptics-dev elliptics-client elliptics libboost-system-dev --force-yes -y
   - go get golang.org/x/tools/cmd/cover
   - go get gopkg.in/check.v1
 
