--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,13 @@ dist: trusty
 go:
   - tip
 
+addons:
+  apt:
+    sources:
+    - llvm-toolchain-precise
+    packages:
+    - clang-3.8
+
 before_install:
   - echo 'deb http://repo.reverbrain.com/trusty current/amd64/' | sudo tee -a /etc/apt/sources.list
   - sudo apt-get update -qq
